fix overflow x

--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -1,3 +1,7 @@
+html{
+    overflow-x: hidden;
+}
+
 .app{
     .link{
         color: inherit;
